--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">All Test Suite</th></tr>
-<tr><td><a href="#t0">test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">133</td><td>functest</td><td></td></tr>
+<tr><td><a href="#t0">test1</a></td><td class="num">7</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">214</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test1 &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.juaracoding.testng.GroupTestExample</td><td><a href="#m0">testingExitMessage</a></td><td rowspan="1">1665141767334</td><td rowspan="1">4</td></tr><tr><th colspan="4">test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.juaracoding.testng.GroupTestExample</td><td><a href="#m1">testPrintMessage</a></td><td rowspan="1">1665141767310</td><td rowspan="1">16</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">All Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.juaracoding.featuretwo.ProcedureExecution</td><td><a href="#m0">testOne</a></td><td rowspan="1">1665148432032</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m1">testThree</a></td><td rowspan="1">1665148432059</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="3">com.juaracoding.testng.TestCalculator</td><td><a href="#m2">testAdd</a></td><td rowspan="1">1665148432085</td><td rowspan="1">13</td></tr><tr class="passedodd"><td><a href="#m3">testAssertTrue</a></td><td rowspan="1">1665148432102</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m4">testSubstract</a></td><td rowspan="1">1665148432115</td><td rowspan="1">1</td></tr><tr class="passedeven"><td rowspan="2">com.juaracoding.testng.TestCalculatorTwo</td><td><a href="#m5">testAdd</a></td><td rowspan="1">1665148432129</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m6">testSubstract</a></td><td rowspan="1">1665148432139</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>test1</h2><h3 id="m0">com.juaracoding.testng.GroupTestExample#testingExitMessage</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [www..com] but found [www.tutorialspoint.com]
-	at com.juaracoding.testng.GroupTestExample.testingExitMessage(GroupTestExample.java:28)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
-... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.juaracoding.testng.GroupTestExample#testPrintMessage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>test1</h2><h3 id="m0">com.juaracoding.featuretwo.ProcedureExecution#testOne</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.juaracoding.featuretwo.ProcedureExecution#testThree</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.juaracoding.testng.TestCalculator#testAdd</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>10</td><td>5</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.juaracoding.testng.TestCalculator#testAssertTrue</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>JuaraCoding</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.juaracoding.testng.TestCalculator#testSubstract</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>10</td><td>5</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.juaracoding.testng.TestCalculatorTwo#testAdd</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.juaracoding.testng.TestCalculatorTwo#testSubstract</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
